applications/istio/overlays/service/gateway-listeners.patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.svc.home.arpa"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-argocd
      protocol: HTTPS
      port: 443
      hostname: "argocd.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: argocd-tls
    - name: https-keycloak
      protocol: HTTPS
      port: 443
      hostname: "sso.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: keycloak
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: keycloak-tls
    - name: https-oauth2-proxy
      protocol: HTTPS
      port: 443
      hostname: "oauth2-proxy.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: oauth2-proxy
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: oauth2-proxy-tls
    - name: https-homepage
      protocol: HTTPS
      port: 443
      hostname: "home.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: homepage
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: homepage-tls
    - name: https-gitlab
      protocol: HTTPS
      port: 443
      hostname: "gitlab.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: gitlab-tls
    - name: https-gitlab-registry
      protocol: HTTPS
      port: 443
      hostname: "registry.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: gitlab-tls
    - name: https-gitlab-kas
      protocol: HTTPS
      port: 443
      hostname: "kas.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: gitlab-tls
    - name: https-gitlab-pages
      protocol: HTTPS
      port: 443
      hostname: "*.pages.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: gitlab-tls
    - name: tcp-gitlab-ssh
      protocol: TCP
      port: 2222
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
    - name: https-grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: grafana-tls
    - name: https-jaeger
      protocol: HTTPS
      port: 443
      hostname: "jaeger.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: jaeger-tls
    - name: https-jaeger-collector
      protocol: HTTPS
      port: 443
      hostname: "jaeger-collector.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: jaeger-tls
    - name: https-loki
      protocol: HTTPS
      port: 443
      hostname: "loki.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: loki-tls
    - name: https-prometheus
      protocol: HTTPS
      port: 443
      hostname: "prometheus.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: prometheus-tls
    - name: https-alertmanager
      protocol: HTTPS
      port: 443
      hostname: "alerts.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: prometheus-tls
    - name: https-mattermost
      protocol: HTTPS
      port: 443
      hostname: "mattermost.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: mattermost
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: mattermost-tls
    - name: https-it-tools
      protocol: HTTPS
      port: 443
      hostname: "it-tools.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: it-tools
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: it-tools-tls
    - name: https-sonarqube
      protocol: HTTPS
      port: 443
      hostname: "sonarqube.svc.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: sonarqube
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: sonarqube-tls
    # - name: https-argo-workflows
    #   protocol: HTTPS
    #   port: 443
    #   hostname: "workflows.svc.home.arpa"
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchLabels:
    #           kubernetes.io/metadata.name: argo-workflows
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: argo-workflows-tls
    # - name: https-backstage
    #   protocol: HTTPS
    #   port: 443
    #   hostname: "backstage.svc.home.arpa"
    #   allowedRoutes:
    #     namespaces:
    #       from: Selector
    #       selector:
    #         matchLabels:
    #           kubernetes.io/metadata.name: backstage
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - kind: Secret
    #         name: backstage-tls
